--- a/build.xml
+++ b/build.xml
@@ -60,19 +60,22 @@
     value="${ubl.download.url.prefix}/${ubl.schema.zip}" />
 
   <!-- set to master if you want latest code -->
-  <property name="cen.rules.version" value="1.3.6" />
+  <property name="cen.rules.version" value="1.3.6a" />
   <property name="cen.rules.version.download" value="${cen.rules.version}" />
   <property name="cen.download.url.prefix"
-    value="https://github.com/ConnectingEurope/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
+    value="https://github.com/phax/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
   <property name="cen.download.url.ubl"
     value="${cen.download.url.prefix}/en16931-ubl-${cen.rules.version.download}.zip" />
   <property name="cen.download.url.cii"
     value="${cen.download.url.prefix}/en16931-cii-${cen.rules.version.download}.zip" />
+  <property name="cen.download.url.master.prefix" value="https://github.com/phax/eInvoicing-EN16931/"/>
+
+
   <!-- XRechnung Schematron Rules section -->
   <!-- build date might get deprecated in future: check on this -->
   <property name="xrechnung.build.date" value="2021-107-31" />
   <!-- XRechnung Schematron -->
-  <property name="xr.schematron.version.major.minor" value="1.5" />
+  <property name="xr.schematron.version.major.minor" value="1.6" />
   <property name="xr.schematron.version.patch" value="0" />
   <property name="xr.schematron.version.full"
     value="${xr.schematron.version.major.minor}.${xr.schematron.version.patch}" />
@@ -352,9 +355,11 @@
     
   </target>
 
+  
+
   <target name="retrieve-cen-rules-from-master" depends="init" if="${cen.master.target}"
     description="Download CEN business rules (schematron) from master branch to download directory">
-    <get src="https://github.com/CenPC434/validation/archive/master.zip"
+    <get src="${cen.download.url.master.prefix}/archive/master.zip"
       dest="${download.dir}" verbose="true" skipexisting="true"
       usetimestamp="true" />
   </target>
