--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,11 @@
-<project name="xrechnung-validation-configuration" default="compile" basedir=".">
+<project name="xrechnung-validation-configuration" default="compile" basedir="." xmlns:resolver="antlib:org.apache.maven.resolver.ant">
   <description>Build the XRechnung validation configuration for ITPLR-KoSIT
         validator</description>
+  
+  <property name="maven.ant.resolver.version" value="1.3.1" />
+  <property name="maven.ant.resolver.jar.name"
+    value="maven-resolver-ant-tasks-${maven.ant.resolver.version}-uber.jar" />
+  
   <!-- set global default properties for this build -->
   <!-- main build directories -->
   <property name="src.dir" location="${basedir}/src" />
@@ -110,7 +115,11 @@
 
 
   <property name="reports.dir" location="${build.dir}/reports" />
-
+  
+  <taskdef uri="antlib:org.apache.maven.resolver.ant"
+    resource="org/apache/maven/resolver/ant/antlib.xml"
+    classpath="${lib.dir}/${maven.ant.resolver.jar.name}" />
+  
   <macrodef name="xslt-saxon">
     <sequential>
       <fail message="Not implemented yet" />
@@ -174,6 +183,13 @@
       <echo message="finished schematron compile output to @{outdir}/${schematron.basename}.xslt" />
     </sequential>
   </macrodef>
+  
+  <target name="fetch-resolver" depends="init"> <!-- depends? -->
+    <echo message="Init Ant-Maven Resolver ${user.home}" />
+    <get 
+      src="https://repo1.maven.org/maven2/org/apache/maven/resolver/maven-resolver-ant-tasks/${maven.ant.resolver.version}/${maven.ant.resolver.jar.name}"
+      dest="${lib.dir}" usetimestamp="true" />
+  </target>
 
   <target name="init" description="Initializes build directory structure and ISO timestamp">
     
