--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>org.kosit</groupId>
-    <artifactId>validator-configuration-xrechnung</artifactId>  <!--  -->
+    <artifactId>validator-configuration-xrechnung</artifactId>
     <version>2.1.1-SNAPSHOT</version> <!--  -->
     <packaging>jar</packaging> <!-- default? -->
     
@@ -12,7 +12,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.saxon-he>9.9.1-7</version.saxon-he> <!--  -->
+        <version.saxon-he>9.9.1-7</version.saxon-he>
     </properties>
     
     <!--
