--- a/build.xml
+++ b/build.xml
@@ -122,11 +122,7 @@
     <format property="build.date" pattern="yyyy-MM-dd" />
   </tstamp>
   
-  
-  <taskdef uri="antlib:org.apache.maven.resolver.ant"
-    resource="org/apache/maven/resolver/ant/antlib.xml"
-    classpath="${lib.dir}/${maven.ant.resolver.jar.name}" />
-  
+ 
   
   <macrodef name="xslt-saxon">
     <sequential>
@@ -192,15 +188,67 @@
     </sequential>
   </macrodef>
   
-  <target name="fetch-resolver" depends="init-directories">
+  
+  <available  property="maven.available" file="${lib.dir}/${maven.ant.resolver.jar.name}" />
+  
+  <target name="init-minimum">
+    <echo message="Initialising Build Infrastructure" />
+    
+    <!-- Create the build directory structure  -->
+    <mkdir dir="${build.dir}" />
+    <mkdir dir="${download.dir}" />
+    <mkdir dir="${lib.dir}" />
+    <mkdir dir="${dist.dir}" />
+    
+    
+  </target>
+  
+  
+  <target name="fetch-resolver" depends="init-minimum" unless="maven.available">
     <echo message="Init Ant-Maven Resolver ${user.home}" />
     <get 
       src="https://repo1.maven.org/maven2/org/apache/maven/resolver/maven-resolver-ant-tasks/${maven.ant.resolver.version}/${maven.ant.resolver.jar.name}"
       dest="${lib.dir}" usetimestamp="true" />
   </target>
   
-  <target name="dependency-resolve" depends="init">
-    <echo message="Resolving all dependecies and init ant tasksdefs" />
+  <target name="init-with-maven" depends="fetch-resolver">
+    <fail message="Resolver ${lib.dir}/${maven.ant.resolver.jar.name} is missing. Use fetch-resolver first">
+      <condition>
+        <not>
+          <available file="${lib.dir}/${maven.ant.resolver.jar.name}" />
+        </not>
+      </condition>
+    </fail>
+ 
+    <taskdef uri="antlib:org.apache.maven.resolver.ant"
+      resource="org/apache/maven/resolver/ant/antlib.xml"
+      classpath="${lib.dir}/${maven.ant.resolver.jar.name}" />
+    
+ 
+    <!-- sets the property cen.master.target if version is set to master and then only downloads from master instead of release.  -->
+    <condition property="cen.master.target">
+      <equals arg1="${cen.rules.version}" arg2="master" />
+    </condition>
+    
+    <echo>Build date: ${build.date}</echo>
+    
+    <!-- Because of "If a POM is set via a file parameter its effective model is made available as properties to the Ant project" see https://maven.apache.org/resolver-ant-tasks/ -->
+    <!-- These properties are not output by echoproperties -->
+    <resolver:pom file="pom.xml" id="pom" />
+    <echo message="Validator Configuration Version ${pom.version}" />
+    
+    
+  </target>
+  
+  <target name="init" depends="init-minimum, init-with-maven">
+    
+  </target>
+  
+  <target name="dependency-resolve-system" depends="retrieve-ubl-schema">
+    
+  </target>
+  
+  <target name="dependency-resolve-pom" depends="init">
     
     <resolver:resolve>
       <dependencies>
@@ -219,6 +267,11 @@
     <!-- showing resolved deps as ant props (only available after resolve task -->
     <echoproperties prefix="dep." />
     <echo message="maven artifact version ${pom.version} and ${validator.configuration.version.full}" />
+  </target>
+  
+  <target name="dependency-resolve" depends="init, dependency-resolve-system, dependency-resolve-pom">
+    <echo message="Resolving all dependecies" />
+    
     <!-- For local development -->
     <copy todir="${lib.dir}">
       <path refid="classpath.compile" />
@@ -226,42 +279,7 @@
     
   </target>
   
-  <target name="init" depends="init-minimum-only">
-  </target>
-  
-  <target name="init-minimum-only" depends="init-directories" description="Initializes ISO timestamp">
-    
-    <echo message="Initialising Build Infrastructure" />
-    <fail message="Resolver ${lib.dir}/${maven.ant.resolver.jar.name} is missing. Use fetch-resolver first">
-      <condition>
-        <not>
-          <available file="${lib.dir}/${maven.ant.resolver.jar.name}" />
-        </not>
-      </condition>
-    </fail>
-    
-    <!-- sets the property cen.master.target if version is set to master and then only downloads from master instead of release.  -->
-    <condition property="cen.master.target">
-      <equals arg1="${cen.rules.version}" arg2="master" />
-    </condition>
-    
-    <echo>Build date: ${build.date}</echo>
-    
-    <!-- Because of "If a POM is set via a file parameter its effective model is made available as properties to the Ant project" see https://maven.apache.org/resolver-ant-tasks/ -->
-    <!-- These properties are not output by echoproperties -->
-    <resolver:pom file="pom.xml" id="pom" />
-    <echo message="Validator Configuration Version ${pom.version}" />
-    
-  </target>
-  
-  <target name="init-directories" description="Initializes build directory structure used by compile">
-    <!-- Create the build directory structure  -->
-    <mkdir dir="${build.dir}" />
-    <mkdir dir="${download.dir}" />
-    <mkdir dir="${lib.dir}" />
-    <mkdir dir="${dist.dir}" />
-  </target>
-
+   
   <target name="delete-saxon" depends="init" description="Remove downloaded Saxon-HE stuff">
     <delete file="${download.dir}/SaxonHE${saxon.file.version}.zip" />
     <delete file="${lib.dir}/${saxon.jar}" />
@@ -532,7 +550,7 @@
 
 
   <target name="compile"
-    depends="compile-scenario,retrieve-all-schema-rules,compile-cen-rules"
+    depends="dependency-resolve,compile-scenario,retrieve-all-schema-rules,compile-cen-rules"
     description="Compile XSDs and XSLTs into validation configuration conformat repository directory">
     <echo>Compiling Schemas and XSLTs ...</echo>
     <copy file="${src.dir}/default-report.xsl" todir="${resource.dir}" />
@@ -731,11 +749,11 @@
   </target>
 
   <target name="dist" depends="compile,test, dist-only" description="Generate the distribution"> </target>
+  
   <target name="clean" description="clean up">
     <!-- Delete the ${build} and ${dist} directory trees -->
     <delete dir="${build.dir}" verbose="true" includeEmptyDirs="true" />
     <delete dir="${dist.dir}" />
-    <delete dir="${lib.dir}" />
     <delete dir="${reports.dir}" />
   </target>
 </project>
