--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <!-- This one is provided by ant -->
         <dependency>
             <groupId>ubl</groupId>
-            <artifactId>ubli-ggg</artifactId>
+            <artifactId>ubl-schema</artifactId>
             <version>2.1</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/UBL-2.1.zip</systemPath>
