--- a/build.xml
+++ b/build.xml
@@ -42,12 +42,7 @@
   <!-- Pick by default the standalone distribution -->  
   <property name="validator.jar" value="validationtool-${validator.version}-standalone.jar" />
 
-  <!-- the name of the JAR file in the downloaded ZIP file -->
-  <!--
-  <property name="saxon.jar" value="version.saxon-he" />
-  -->
-
-  <property name="saxon.jar" value="Saxon-HE-9.9.1-8.jar" />
+  <property name="saxon.jar" value="Saxon-HE-${version.saxon-he}.jar" />
 
   <property name="cii.version" value="D16B" />
   <property name="cii.schema.zip" value="D16B_SCRDM__Subset__CII.zip" />
@@ -220,21 +215,21 @@
  
     <taskdef uri="antlib:org.apache.maven.resolver.ant"
       resource="org/apache/maven/resolver/ant/antlib.xml"
-      classpath="${lib.dir}/${maven.ant.resolver.jar.name}" onerror="fail"/>
+      classpath="${lib.dir}/${maven.ant.resolver.jar.name}" onerror="fail"/>   
     
-    
-    <!-- Because of "If a POM is set via a file parameter its effective model is made available as properties to the Ant project" see https://maven.apache.org/resolver-ant-tasks/ -->
+  </target>
+
+  <target name="init-maven-based-properties">
+  <!-- Because of "If a POM is set via a file parameter its effective model is made available as properties to the Ant project" see https://maven.apache.org/resolver-ant-tasks/ -->
     <!-- These properties are not output by echoproperties -->
     <resolver:pom file="pom.xml" id="pom" />
     <echo message="Validator Configuration Version ${pom.version}" />
-    
-    
+<!-- TODO -->
   </target>
   
-  <target name="init" depends="init-directories, init-maven-resolver">
+  <target name="init" depends="init-directories, init-maven-resolver, init-maven-based-properties">
     <echo message="Initialising Build Infrastructure" />
-    <echo>Build date: ${build.date}</echo>
-    
+    <echo>Build date: ${build.date}</echo>    
     
     <!-- sets the property cen.master.target if version is set to master and then only downloads from master instead of release.  -->
     <condition property="cen.master.target">
