--- a/pom.xml
+++ b/pom.xml
@@ -9,29 +9,12 @@
     <packaging>pom</packaging>
     
     <name>Validator Configuration XRechnung</name> 
-    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>properties-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <executions>
-                    <execution>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>read-project-properties</goal>
-                        </goals>
-                        <configuration>
-                            <files>
-                                <file>common.build.properties</file>
-                            </files>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+     
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <version.saxon-he>9.9.1-8</version.saxon-he> <!-- Saxon 10 -->
+    </properties>
+     
     
     <dependencies>
         <dependency>
